# formula1-race-analysis

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  f1_racing_results.py  pyproject.toml
.github/workflows/: build.yaml  release.yaml
display/: display_race_report.py
formula1_race_analysis/: __init__.py  custom_exceptions.py  data_formatter.py  driver_model.py  logging_config.py  q1_report_generator.py  q1_session_analyzer.py
src/: f1_racing_results.py  f1_web_app.py
src/config/: file_paths.py  logging_config.py
src/display/: display_race_report.py  q1_report_generator.py
src/formula1_race_analysis/: __init__.py  custom_types.py  data_formatter.py  driver_model.py  exceptions.py  models.py  q1_session_analyzer.py  schemas.py
src/formula1_race_analysis/config/: __init__.py  file_paths.py
src/formula1_race_analysis/display/: __init__.py  q1_report_generator.py
src/static/css/: style.css
src/templates/: 400.html  base.html  driver_id.html  drivers.html  report.html
tests/: conftest.py  test_data_formatter.py  test_display_race_report.py  test_f1_web_app.py  test_models.py  test_q1_report_generator.py  test_q1_session_analyzer.py  test_schemas.py
